docs/api/qiskit/0.26/qiskit.providers.ibmq.runtime.ResultDecoder.mdx
---
title: ResultDecoder (v0.26)
description: API reference for qiskit.providers.ibmq.runtime.ResultDecoder in qiskit v0.26
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.ibmq.runtime.ResultDecoder
---

<span id="qiskit-providers-ibmq-runtime-resultdecoder" />

# qiskit.providers.ibmq.runtime.ResultDecoder

<Class id="qiskit.providers.ibmq.runtime.ResultDecoder" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-ibmq-provider/tree/stable/0.13/qiskit/providers/ibmq/runtime/program/result_decoder.py" signature="ResultDecoder" modifiers="class">
  Runtime job result decoder.

  You can subclass this class and overwrite the [`decode()`](#qiskit.providers.ibmq.runtime.ResultDecoder.decode "qiskit.providers.ibmq.runtime.ResultDecoder.decode") method to create a custom result decoder for the results of your runtime program. For example:

  ```python
  class MyResultDecoder(ResultDecoder):

      @classmethod
      def decode(cls, data):
          decoded = super().decode(data)
          custom_processing(decoded)  # perform custom processing
  ```

  Users of your program will need to pass in the subclass when invoking [`qiskit.providers.ibmq.runtime.RuntimeJob.result()`](qiskit.providers.ibmq.runtime.RuntimeJob#result "qiskit.providers.ibmq.runtime.RuntimeJob.result") or [`qiskit.providers.ibmq.runtime.IBMRuntimeService.run()`](qiskit.providers.ibmq.runtime.IBMRuntimeService#run "qiskit.providers.ibmq.runtime.IBMRuntimeService.run").

  ### \_\_init\_\_

  <Function id="qiskit.providers.ibmq.runtime.ResultDecoder.__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                              |                         |
  | ---------------------------------------------------------------------------------------------------------------------------- | ----------------------- |
  | [`__init__`](#qiskit.providers.ibmq.runtime.ResultDecoder.__init__ "qiskit.providers.ibmq.runtime.ResultDecoder.__init__")() | Initialize self.        |
  | [`decode`](#qiskit.providers.ibmq.runtime.ResultDecoder.decode "qiskit.providers.ibmq.runtime.ResultDecoder.decode")(data)   | Decode the result data. |

  ### decode

  <Function id="qiskit.providers.ibmq.runtime.ResultDecoder.decode" signature="decode(data)" modifiers="classmethod">
    Decode the result data.

    **Parameters**

    **data** (`str`) – Result data to be decoded.

    **Return type**

    `Any`

    **Returns**

    Decoded result data.
  </Function>
</Class>

